<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/qwer"

    tools:context=".updateNotesActivity">

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
       android:textColorHint="@color/white"
        android:hint="@string/title1"
        android:id="@+id/title"
        android:textColor="@color/white"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:hint="@string/description"
        android:textColorHint="@color/white"
        android:id="@+id/description1"
        android:layout_below="@id/title"

        android:lines="5"
        android:textColor="@color/white"/>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:layout_alignParentBottom="true"
        android:background="@drawable/custom_btn_bg"
        android:text="@string/update_notes"
        android:textSize="18sp"
        android:textStyle="bold"
        android:textColor="@color/white"
        android:id="@+id/updateNote"/>

</RelativeLayout>